MatrixDlg added, struglling with the menu bar

--- a/HeatMap/HeatMap.vcxproj
+++ b/HeatMap/HeatMap.vcxproj
@@ -185,6 +185,7 @@
   <ItemGroup>
     <ClInclude Include="ChildFrm.h" />
     <ClInclude Include="ClassView.h" />
+    <ClInclude Include="CMatrixDlg.h" />
     <ClInclude Include="FileView.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="HeatMap.h" />
@@ -201,6 +202,7 @@
   <ItemGroup>
     <ClCompile Include="ChildFrm.cpp" />
     <ClCompile Include="ClassView.cpp" />
+    <ClCompile Include="CMatrixDlg.cpp" />
     <ClCompile Include="FileView.cpp" />
     <ClCompile Include="HeatMap.cpp" />
     <ClCompile Include="HeatMapDoc.cpp" />
