--- a/HeatMap/HeatMap.vcxproj.filters
+++ b/HeatMap/HeatMap.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CMatrixDlg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HeatMap.cpp">
@@ -90,6 +93,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CMatrixDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
