--- a/HeatMap/HeatMap.vcxproj.filters
+++ b/HeatMap/HeatMap.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="CMatrixDlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CModeDlg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HeatMap.cpp">
@@ -96,6 +99,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CMatrixDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CModeDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
